# auido-effects

./: Effects Implementation.ipynb  Effects Parameters.ipynb  hello.py  pyproject.toml
.ipynb_checkpoints/: Effects Parameters-checkpoint.ipynb
output/optimization/results/.ipynb_checkpoints/: values-checkpoint.txt
output/values/: revhall2.txt  revstagea.txt  revstagebb.txt  revstagedb.txt  revstagefb.txt  revstagegtht.txt
