[project]
name = "effects-parameters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.4",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.10.0",
    "numpy>=2.0.2",
    "pydub>=0.25.1",
    "sox>=1.5.0",
]
